macros/tests/compile_fail/invalid_attribute.stderr
error: [melbi] expected `name = identifier`, or no arguments
 --> tests/compile_fail/invalid_attribute.rs:5:12
  |
5 | #[melbi_fn(invalid_key = "value")]
  |            ^^^^^^^^^^^^^^^^^^^^^
